--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,9 +1,9 @@
 <section class="aboutContainer">
     <div class="cardAbout">
         <span class="cardTextContent">
-            <span class="cardTextContentBigger">Welcome to our online <span class="colorRed bold">shop</span> service!</span>
-            <span class="cardTextContentnormal">We offer a convenient and <span class="colorRed bold">secure</span> shopping experience with a wide range of products. Our mission is to provide <span class="colorRed bold">quality</span> and <span class="colorRed bold">authentic</span> items while ensuring the <span class="colorRed bold">privacy</span> and security of our customers. Shop with confidence and enjoy the convenience of having your purchases delivered to your doorstep. Thank you for choosing our service, and we look forward to serving you!</span>
-            <span class="cardTextContentBigger">The <span class="colorRed bold">Shop</span> Team</span>
+            <span class="cardTextContentBigger">Welcome to our online <span class="color__red text__bold">shop</span> service!</span>
+            <span class="cardTextContentnormal">We offer a convenient and <span class="color__red text__bold">secure</span> shopping experience with a wide range of products. Our mission is to provide <span class="color__red bold">quality</span> and <span class="color__red bold">authentic</span> items while ensuring the <span class="color__red bold">privacy</span> and security of our customers. Shop with confidence and enjoy the convenience of having your purchases delivered to your doorstep. Thank you for choosing our service, and we look forward to serving you!</span>
+            <span class="cardTextContentBigger">The <span class="color__red text__bold">Shop</span> Team</span>
         </span>
         <img src="https://placehold.co/300x300" alt="" class="cardImage">
     </div>
