--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <section class="home">
     <div class="home__card">
-        <span class="home__title">Welcome to <span class="bold">The <span class="colorRed">Shop</span></span></span>
-        <span class="home__description">We are the best Web App to buy <a routerLink="/products/all" class="routerLink"><span class="bold colorRed">products</span></a></span>
+        <span class="home__title">Welcome to <span class="text__bold">The <span class="color__red">Shop</span></span></span>
+        <span class="home__description">We are the best Web App to buy <a routerLink="/products/all" class="router__link"><span class="text__bold color__red">products</span></a></span>
         <div>
-            <a class="routerLink" routerLink="/products/all"><button class="button">Buy now</button></a>
+            <a class="router__link" routerLink="/products/all"><button class="button">Buy now</button></a>
         </div>
     </div>
     <div>
