--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -2,7 +2,7 @@
     <section class="products__categories">
         <span class="products__categories__title">Category</span>
         <ul class="products__categories__list">
-            <li *ngFor="let categorie of categories" class="products__categories__item"><a routerLink="/products/{{categorie}}" class="routerLink">{{categorie}}</a></li>
+            <li *ngFor="let categorie of categories" class="products__categories__item"><a routerLink="/products/{{categorie}}" class="router__link">{{categorie}}</a></li>
         </ul>
     </section>
     <section class="products__items" >
