--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -2,13 +2,13 @@
 
     <img src="{{product.imageUrl}}" alt="" class="productImage">
     <span class="productName">{{product.name}}</span>
-    <span class="productPrice">R$ {{product.price}},00</span>
+    <span class="productPrice text__green">R$ {{product.price}},00</span>
     <span class="productCategory">{{product.category}}</span>
 
     <app-star-rating [rating]="product.rating"></app-star-rating>
 
     <div class="productActions">
-        <a routerLink="/product/{{product.id}}" class="routerLink"><button class="button">Buy</button></a>
+        <a routerLink="/product/{{product.id}}" class="router__link"><button class="button">Buy</button></a>
         <div (click)="addToCart()" class="svgAction">
             <svg version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             width="30px" height="30px" viewBox="0 0 32 32" xml:space="preserve">
