--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
 <header class="header">
-    <a routerLink="/" class="routerLink"><span class="header__title">The <span class="colorRed">Shop</span></span></a>
+    <a routerLink="/" class="router__link"><span class="header__title">The <span class="color__red">Shop</span></span></a>
     <app-navbar></app-navbar>
 </header>
