--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav class="navBar">
     <ul class="routerList">
-        <li class="routerItem"><a routerLink="/" class="routerLink bold" >Home</a></li>
-        <li class="routerItem"><a routerLink="/products/all" class="routerLink bold" >Products</a></li>
-        <li class="routerItem"><a routerLink="/about" class="routerLink bold" >About</a></li>
-        <li class="routerItem"><a routerLink="/contact" class="routerLink bold" >Contact</a></li>
-        <li class="routerItem"><a routerLink="/cart" class="routerLink bold" >
+        <li class="routerItem"><a routerLink="/" class="router__link text__bold" >Home</a></li>
+        <li class="routerItem"><a routerLink="/products/all" class="router__link text__bold" >Products</a></li>
+        <li class="routerItem"><a routerLink="/about" class="router__link text__bold" >About</a></li>
+        <li class="routerItem"><a routerLink="/contact" class="router__link text__bold" >Contact</a></li>
+        <li class="routerItem"><a routerLink="/cart" class="router__link text__bold" >
             <svg version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             width="30px" height="30px" viewBox="0 0 32 32" xml:space="preserve">
        <style type="text/css">
@@ -21,7 +21,7 @@
     <svg (click)="setShowMenu()" xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 24 24">
         <path d="M0 0h24v24H0z" fill="none"/>
         <path d="M4 18h16v-2H4v2zM4 13h16v-2H4v2zM4 6v2h16V6H4z"/></svg>
-      <a routerLink="/cart" class="routerLink bold" (click)="closeShowMenu()">
+      <a routerLink="/cart" class="router__link text__bold" (click)="closeShowMenu()">
         <svg version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
         width="30px" height="30px" viewBox="0 0 32 32" xml:space="preserve">
    <style type="text/css">
@@ -35,9 +35,9 @@
 </nav>
 <section class="menuMobile" *ngIf="showMenu" (click)="closeShowMenu()">
     <ul class="routerMobileMenu">
-        <li class="routerItemMobile"><a routerLink="/" class="routerMobileLink bold">Home</a></li>
-        <li class="routerItemMobile"><a routerLink="/products/all" class="routerMobileLink bold">Products</a></li>
-        <li class="routerItemMobile"><a routerLink="/about" class="routerMobileLink bold">About</a></li>
-        <li class="routerItemMobile"><a routerLink="/contact" class="routerMobileLink bold">Contact</a></li>
+        <li class="routerItemMobile"><a routerLink="/" class="routerMobileLink text__bold">Home</a></li>
+        <li class="routerItemMobile"><a routerLink="/products/all" class="routerMobileLink text__bold">Products</a></li>
+        <li class="routerItemMobile"><a routerLink="/about" class="routerMobileLink text__bold">About</a></li>
+        <li class="routerItemMobile"><a routerLink="/contact" class="routerMobileLink text__bold">Contact</a></li>
     </ul>
 </section>
