--- a/src/styles.css
+++ b/src/styles.css
@@ -26,11 +26,19 @@ body {
     background-color: rgb(163, 5, 5);
 }
 
-.routerLink{
+.router__link{
     text-decoration: none;
     color: black;
 }
 
-.colorRed{
+.color__red{
     color: red;
+}
+
+.text__bold{
+    font-weight: bold;
+}
+
+.text__green{
+    color: green;
 }
