Update tests basic

--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <section class="productContent">
 
-    <img src="{{product.imageUrl}}" alt="" class="productImage">
+    <img src="{{product.imageUrl}}" alt="imagem" class="productImage">
     <span class="productName">{{product.name}}</span>
     <span class="productPrice text__green">R$ {{product.price}},00</span>
     <span class="productCategory">{{product.category}}</span>
